fix: fix font issue

--- a/index.html
+++ b/index.html
@@ -494,14 +494,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="max-width-small">
-                                    <p class="text-size-small">OutFLow is a platform which grants you the access to all humankind knowledge.
-                                        It portrays a graph of what has been learnt, what has been discovered, and what is yet to come.
+                                <div class="max-width-large">
+                                    <p class="text-size-small">
+                                        OutFLow is a platform which grants you the access to all humankind knowledge.<br>
+                                        It portrays a graph of what has been learnt, what has been discovered, and what is yet to come.<br>
                                         No matter where you live, you can drop college and pick up OutFlow, Choose what you want to learn,
                                         your learning preferences, and your favourite teacher, it will create a model with all your personal
-                                        preferences and through XR/AR you can see anything what could seem impossible to see. You learn from OutFlow,
-                                        you contribute to its knowledge content.
-                                        We share world's content, you share your brain with the world. "What goes around comes around".
+                                        preferences and through XR/AR you can see anything what could seem impossible to see.<br>You learn from OutFlow,
+                                        you contribute to its knowledge content.<br>
+                                        We share world's content, you share your brain with the world.<br><br><b>"What goes around comes around"</b>
                                     </p>
                                     <div class="spacer-medium"></div>
                                 </div>
@@ -559,7 +560,12 @@
                                                 <div class="text-size-regular">Knowledge Tree</div>
                                             </div>
                                             <div class="spacer-small"></div>
-                                            <div class="text-size-small">see all human knowledge in one place, choose your path, select the sources you want to learn from. Utilize the resources as much as you want, but there is catch, you teach to others as well, share your thoughts, problems, and contribute towards the community. Steve Jobs: “We're here to put a dent in the universe. Otherwise why else even be here?”  so, put your dent.</div>
+                                            <div class="text-size-small">
+                                                See all human knowledge in one place, choose your path, select the sources you want to learn from.<br>
+                                                Utilize the resources as much as you want, but there is catch, you teach to others as well, share your thoughts,
+                                                problems, and contribute towards the community.<br><br>
+                                                <b>Steve Jobs</b>: “We're here to put a dent in the universe. Otherwise why else even be here?”  so, put your dent.
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -588,7 +594,11 @@
                                                 <div class="text-size-regular">DVLA</div>
                                             </div>
                                             <div class="spacer-small"></div>
-                                            <div class="text-size-small">a totally customized model will pass through your reality, and will teach you the topics, books and sources you have selected. teaching methods are tailored to your learning habits and preferences, they can vary for each topic. Decentralized Virtual Learning Assistant will free your from educational barriers that may take your rights to learn.</div>
+                                            <div class="text-size-small">
+                                                A totally customized model will pass through your reality, and will teach you the topics, books and sources you have selected.<br>
+                                                Teaching methods are tailored to your learning habits and preferences, they can vary for each topic.<br>
+                                                Decentralized Virtual Learning Assistant will free your from educational barriers that may take your rights to learn.
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
