fix: add new logo and fix texts

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </script>
     <link href="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c3d57d36be134f8819f0f0_favicon.svg"
         rel="shortcut icon" type="image/x-icon" />
-    <link rel="icon" href="./images/favicon.svg">
+    <link rel="icon" href="./images/logo.svg">
     <!-- <link href="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c3d589425098b3ffec3b16_webclip.svg" rel="apple-touch-icon" /> -->
 </head>
 
@@ -216,9 +216,9 @@
                         data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b6ca" href="https://outflow.top" aria-current="page"
                         class="brand-link w-inline-block w--current">
                         <div class="logo-wrap bigger-image"><img loading="lazy"
-                                src="./images/favicon.svg"
+                                src="./images/logo.svg"
                                 alt="Logo – Outflow Webflow Template" class="logo" /><img loading="lazy"
-                                src="./images/favicon.svg"
+                                src="./images/logo.svg"
                                 alt="Logo – Outflow Webflow Template" class="logo" /></div>
                         <div class="logo-bg"></div>
                     </a>
@@ -448,29 +448,19 @@
                         <div class="padding-section-small">
                             <div class="summary-content-wrapper">
                                 <div class="summary-item">
-                                    <p class="text-size-large">Teach</p>
+                                    <p class="text-size-large">Learn</p>
                                     <!-- <div class="text-size-small text-color-alternate">Specialized at</div> -->
                                     <!-- <div class="text-size-small">UI/UX &amp; Graphic Design</div> -->
                                 </div>
                                 <div class="summary-divider"></div>
                                 <div class="summary-item">
-                                    <p class="text-size-large">Learn</p>
-                                    <!-- <div class="text-size-small text-color-alternate">Empowering</div>
-                                    <div class="text-size-small">Brands &amp; Digital Products</div> -->
+                                    <p class="text-size-large">Teach</p>
                                 </div>
                                 <div class="summary-divider"></div>
 
                                 <div class="summary-item">
-                                    <p class="text-size-large">...</p>
-                                    <!-- <div class="text-size-small text-color-alternate">Empowering</div>
-                                    <div class="text-size-small">Brands &amp; Digital Products</div> -->
+                                    <p class="text-size-large">Elevate</p>
                                 </div>
-                                <!-- <div class="summary-divider"></div>
-                                <div class="summary-item">
-                                    <div class="work-name">Learning</div>
-                                     <div class="text-size-small text-color-alternate">From</div>
-                                    <div class="text-size-small">London</div>
-                                </div>  -->
                             </div>
                         </div>
                     </div>
