feat: add leaders section

--- a/index.html
+++ b/index.html
@@ -215,16 +215,14 @@
                     <a id="w-node-c455ec48-5724-5b5d-03f2-2f117cc3b6ca-7cc3b6c7"
                         data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b6ca" href="https://outflow.top" aria-current="page"
                         class="brand-link w-inline-block w--current">
-                        <div class="logo-wrap bigger-image"><img loading="lazy"
-                                src="./images/logo.svg"
+                        <div class="logo-wrap bigger-image"><img loading="lazy" src="./images/logo.svg"
                                 alt="Logo – Outflow Webflow Template" class="logo" /><img loading="lazy"
-                                src="./images/logo.svg"
-                                alt="Logo – Outflow Webflow Template" class="logo" /></div>
+                                src="./images/logo.svg" alt="Logo – Outflow Webflow Template" class="logo" /></div>
                         <div class="logo-bg"></div>
                     </a>
                     <a id="w-node-c455ec48-5724-5b5d-03f2-2f117cc3b6cf-7cc3b6c7"
-                        data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b6cf"  target="_blank" href="https://forms.fillout.com/t/mnF4h35qLqus"
-                        class="nav-button-wrap w-inline-block">
+                        data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b6cf" target="_blank"
+                        href="https://forms.fillout.com/t/mnF4h35qLqus" class="nav-button-wrap w-inline-block">
                         <div class="nav-button-text-wrap">
                             <div class="nav-button-text">GET IN TOUCH</div>
                             <div class="nav-button-text">GET IN TOUCH</div>
@@ -395,8 +393,8 @@
                                                                 sizes="(max-width: 479px) 92vw, (max-width: 767px) 96vw, (max-width: 991px) 85vw, (max-width: 1279px) 86vw, (max-width: 1439px) 87vw, (max-width: 1919px) 90vw, 98vw"
                                                                 srcset="./images/main_1.jpg 500w, ./images/main_1.jpg 800w, ./images/main_1.jpg 1080w, ./images/main_1.jpg 1280w"
                                                                 alt="Slide Image – Outflow Webflow Template"
-                                                                src="./images/main_1.jpg"
-                                                                loading="lazy" class="slide-image" /></div>
+                                                                src="./images/main_1.jpg" loading="lazy"
+                                                                class="slide-image" /></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -408,8 +406,8 @@
                                                                 sizes="(max-width: 479px) 92vw, (max-width: 767px) 96vw, (max-width: 991px) 85vw, (max-width: 1279px) 86vw, (max-width: 1439px) 87vw, (max-width: 1919px) 90vw, 98vw"
                                                                 srcset="./images/main_2.jfif 500w, ./images/main_2.jfif 800w, ./images/main_2.jfif 1080w, ./images/main_2.jfif 1280w"
                                                                 alt="Slide Image – Outflow Webflow Template"
-                                                                src="./images/main_2.jfif"
-                                                                loading="lazy" class="slide-image" /></div>
+                                                                src="./images/main_2.jfif" loading="lazy"
+                                                                class="slide-image" /></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -421,8 +419,8 @@
                                                                 sizes="(max-width: 479px) 92vw, (max-width: 767px) 96vw, (max-width: 991px) 85vw, (max-width: 1279px) 86vw, (max-width: 1439px) 87vw, (max-width: 1919px) 90vw, 98vw"
                                                                 srcset="./images/main_3.jfif 500w, ./images/main_3.jfif 800w, ./images/main_3.jfif 1080w, ./images/main_3.jfif 1280w"
                                                                 alt="Slide Image – Outflow Webflow Template"
-                                                                src="./images/main_3.jfif"
-                                                                loading="lazy" class="slide-image" /></div>
+                                                                src="./images/main_3.jfif" loading="lazy"
+                                                                class="slide-image" /></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -486,13 +484,19 @@
                                 </div>
                                 <div class="max-width-large">
                                     <p class="text-size-small">
-                                        OutFLow is a platform which grants you the access to all humankind knowledge.<br>
-                                        It portrays a graph of what has been learnt, what has been discovered, and what is yet to come.<br>
-                                        No matter where you live, you can drop college and pick up OutFlow, Choose what you want to learn,
-                                        your learning preferences, and your favourite teacher, it will create a model with all your personal
-                                        preferences and through XR/AR you can see anything what could seem impossible to see.<br>You learn from OutFlow,
+                                        OutFLow is a platform which grants you the access to all humankind
+                                        knowledge.<br>
+                                        It portrays a graph of what has been learnt, what has been discovered, and what
+                                        is yet to come.<br>
+                                        No matter where you live, you can drop college and pick up OutFlow, Choose what
+                                        you want to learn,
+                                        your learning preferences, and your favourite teacher, it will create a model
+                                        with all your personal
+                                        preferences and through XR/AR you can see anything what could seem impossible to
+                                        see.<br>You learn from OutFlow,
                                         you contribute to its knowledge content.<br>
-                                        We share world's content, you share your brain with the world.<br><br><b>"What goes around comes around"</b>
+                                        We share world's content, you share your brain with the world.<br><br><b>"What
+                                            goes around comes around"</b>
                                     </p>
                                     <div class="spacer-medium"></div>
                                 </div>
@@ -534,8 +538,7 @@
                                 <div class="w-layout-grid work-component-grid"><a
                                         id="w-node-_0161659f-8526-9695-b1fc-694f6e184557-e7b5dc05"
                                         data-w-id="0161659f-8526-9695-b1fc-694f6e184557" href="/work/horizon"
-                                        class="work-image-wrapper _01 w-inline-block"><img
-                                            src="./images/main_6.jpg"
+                                        class="work-image-wrapper _01 w-inline-block"><img src="./images/main_6.jpg"
                                             loading="lazy" alt="Horizon"
                                             sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 84vw, (max-width: 1439px) 44vw, (max-width: 1919px) 46vw, 49vw"
                                             srcset="./images/main_6.jpg 500w, ./images/main_6.jpg 800w, ./images/main_6.jpg 1080w, ./images/main_6.jpg 1280w"
@@ -551,10 +554,13 @@
                                             </div>
                                             <div class="spacer-small"></div>
                                             <div class="text-size-small">
-                                                See all human knowledge in one place, choose your path, select the sources you want to learn from.<br>
-                                                Utilize the resources as much as you want, but there is catch, you teach to others as well, share your thoughts,
+                                                See all human knowledge in one place, choose your path, select the
+                                                sources you want to learn from.<br>
+                                                Utilize the resources as much as you want, but there is catch, you teach
+                                                to others as well, share your thoughts,
                                                 problems, and contribute towards the community.<br><br>
-                                                <b>Steve Jobs</b>: “We're here to put a dent in the universe. Otherwise why else even be here?”  so, put your dent.
+                                                <b>Steve Jobs</b>: “We're here to put a dent in the universe. Otherwise
+                                                why else even be here?” so, put your dent.
                                             </div>
                                         </div>
                                     </div>
@@ -568,8 +574,7 @@
                                 <div class="w-layout-grid work-component-grid"><a
                                         id="w-node-c38632dd-2545-a948-e5b5-77fb108336ee-e7b5dc05"
                                         data-w-id="c38632dd-2545-a948-e5b5-77fb108336ee" href="/work/beyond"
-                                        class="work-image-wrapper _02 w-inline-block"><img
-                                            src="./images/main_5.jpg"
+                                        class="work-image-wrapper _02 w-inline-block"><img src="./images/main_5.jpg"
                                             loading="lazy" alt="Beyond"
                                             sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 84vw, (max-width: 1439px) 44vw, (max-width: 1919px) 46vw, 49vw"
                                             srcset="./images/main_5.jpg 500w, ./images/main_5.jpg 800w, ./images/main_5.jpg 1080w, ./images/main_5.jpg 1280w"
@@ -585,9 +590,12 @@
                                             </div>
                                             <div class="spacer-small"></div>
                                             <div class="text-size-small">
-                                                A totally customized model will pass through your reality, and will teach you the topics, books and sources you have selected.<br>
-                                                Teaching methods are tailored to your learning habits and preferences, they can vary for each topic.<br>
-                                                Decentralized Virtual Learning Assistant will free your from educational barriers that may take your rights to learn.
+                                                A totally customized model will pass through your reality, and will
+                                                teach you the topics, books and sources you have selected.<br>
+                                                Teaching methods are tailored to your learning habits and preferences,
+                                                they can vary for each topic.<br>
+                                                Decentralized Virtual Learning Assistant will free your from educational
+                                                barriers that may take your rights to learn.
                                             </div>
                                         </div>
                                     </div>
@@ -727,7 +735,7 @@
                     </div>
                 </div>
             </section> -->
-            <!-- <section class="section-home-skills">
+                    <!-- <section class="section-home-skills">
                 <div class="padding-global">
                     <div class="container-large">
                         <div class="padding-section-large">
@@ -839,6 +847,51 @@
                     </div>
                 </div>
             </section> -->
+
+                    <div class="w-dyn-list">
+                        <div role="list" class="w-dyn-items">
+                            <div role="listitem" class="w-dyn-item">
+                                <section>
+                                    <div class="padding-global">
+                                        <div class="container-large">
+                                            <div class="padding-section-small">
+                                                <div class="summary-content-wrapper">
+                                                    <h3>Leaders</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </section>
+                                <div class="w-layout-grid work-component-grid">
+                                    <div class="work-content-wrapper leader-box _02">
+                                        <div id="w-node-c38632dd-2545-a948-e5b5-77fb108336ee-e7b5dc05"
+                                            data-w-id="c38632dd-2545-a948-e5b5-77fb108336ee" href="/work/beyond"
+                                            class="work-image-wrapper  _02 w-inline-block">
+                                            <img src="./images/persons/erfan.jpg" loading="lazy" alt="Beyond"
+                                                sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 84vw, (max-width: 1439px) 44vw, (max-width: 1919px) 46vw, 49vw"
+                                                srcset="./images/persons/erfan.jpg 500w, ./images/persons/erfan.jpg 800w, ./images/persons/erfan.jpg 1080w, ./images/persons/erfan.jpg 1280w"
+                                                class="work-image" />
+                                        </div>
+                                        <div><h4>Erfan Behruz</h4></div>
+                                    </div>
+
+                                    <div class="work-content-wrapper leader-box _02">
+                                        <div id="w-node-c38632dd-2545-a948-e5b5-77fb108336ee-e7b5dc05"
+                                            data-w-id="c38632dd-2545-a948-e5b5-77fb108336ee" href="/work/beyond"
+                                            class="work-image-wrapper  _02 w-inline-block">
+                                            <img src="./images/persons/mohamadjavad.jpg" loading="lazy" alt="Beyond"
+                                                sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 84vw, (max-width: 1439px) 44vw, (max-width: 1919px) 46vw, 49vw"
+                                                srcset="./images/persons/mohamadjavad.jpg 500w, ./images/persons/mohamadjavad.jpg 800w, ./images/persons/mohamadjavad.jpg 1080w, ./images/persons/mohamadjavad.jpg 1280w"
+                                                class="work-image" />
+                                        </div>
+                                        <div><h4>Mohammadjavad Hoseini</h4></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
         </main>
         <footer class="footer">
             <div class="padding-global">
