feat: change logo and main slider images

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </script>
     <link href="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c3d57d36be134f8819f0f0_favicon.svg"
         rel="shortcut icon" type="image/x-icon" />
-    <link rel="icon" href="./images/logo.svg">
+    <link rel="icon" href="./images/logo-2.svg">
     <!-- <link href="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c3d589425098b3ffec3b16_webclip.svg" rel="apple-touch-icon" /> -->
 </head>
 
@@ -215,9 +215,9 @@
                     <a id="w-node-c455ec48-5724-5b5d-03f2-2f117cc3b6ca-7cc3b6c7"
                         data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b6ca" href="https://outflow.top" aria-current="page"
                         class="brand-link w-inline-block w--current">
-                        <div class="logo-wrap bigger-image"><img loading="lazy" src="./images/logo.svg"
+                        <div class="logo-wrap bigger-image"><img loading="lazy" src="./images/logo-2.svg"
                                 alt="Logo – Outflow Webflow Template" class="logo" /><img loading="lazy"
-                                src="./images/logo.svg" alt="Logo – Outflow Webflow Template" class="logo" /></div>
+                                src="./images/logo-2.svg" alt="Logo – Outflow Webflow Template" class="logo" /></div>
                         <div class="logo-bg"></div>
                     </a>
                     <a id="w-node-c455ec48-5724-5b5d-03f2-2f117cc3b6cf-7cc3b6c7"
@@ -417,9 +417,9 @@
                                                     <div class="slide-image-vertical-flex">
                                                         <div class="slide-image-wrapper"><img
                                                                 sizes="(max-width: 479px) 92vw, (max-width: 767px) 96vw, (max-width: 991px) 85vw, (max-width: 1279px) 86vw, (max-width: 1439px) 87vw, (max-width: 1919px) 90vw, 98vw"
-                                                                srcset="./images/main_3.jfif 500w, ./images/main_3.jfif 800w, ./images/main_3.jfif 1080w, ./images/main_3.jfif 1280w"
+                                                                srcset="./images/main_7.jpg 500w, ./images/main_7.jpg 800w, ./images/main_7.jpg 1080w, ./images/main_7.jpg 1280w"
                                                                 alt="Slide Image – Outflow Webflow Template"
-                                                                src="./images/main_3.jfif" loading="lazy"
+                                                                src="./images/main_7.jpg" loading="lazy"
                                                                 class="slide-image" /></div>
                                                     </div>
                                                 </div>
@@ -856,7 +856,7 @@
                                         <div class="container-large">
                                             <div class="padding-section-small">
                                                 <div class="summary-content-wrapper">
-                                                    <h3>Leaders</h3>
+                                                    <h3>Founders</h3>
                                                 </div>
                                             </div>
                                         </div>
@@ -870,9 +870,9 @@
                                             <img src="./images/persons/erfan.jpg" loading="lazy" alt="Beyond"
                                                 sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 84vw, (max-width: 1439px) 44vw, (max-width: 1919px) 46vw, 49vw"
                                                 srcset="./images/persons/erfan.jpg 500w, ./images/persons/erfan.jpg 800w, ./images/persons/erfan.jpg 1080w, ./images/persons/erfan.jpg 1280w"
-                                                class="work-image" />
+                                                class="work-image leader-image" />
                                         </div>
-                                        <div><h4>Erfan Behruz</h4></div>
+                                        <div><h4>Erfan Behrooz</h4></div>
                                     </div>
 
                                     <div class="work-content-wrapper leader-box _02">
@@ -882,7 +882,7 @@
                                             <img src="./images/persons/mohamadjavad.jpg" loading="lazy" alt="Beyond"
                                                 sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 84vw, (max-width: 1439px) 44vw, (max-width: 1919px) 46vw, 49vw"
                                                 srcset="./images/persons/mohamadjavad.jpg 500w, ./images/persons/mohamadjavad.jpg 800w, ./images/persons/mohamadjavad.jpg 1080w, ./images/persons/mohamadjavad.jpg 1280w"
-                                                class="work-image" />
+                                                class="work-image leader-image" />
                                         </div>
                                         <div><h4>Mohammadjavad Hoseini</h4></div>
                                     </div>
