fix: change one of main images and change some words

--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
                                                     <div class="slide-image-vertical-flex">
                                                         <div class="slide-image-wrapper"><img
                                                                 sizes="(max-width: 479px) 92vw, (max-width: 767px) 96vw, (max-width: 991px) 85vw, (max-width: 1279px) 86vw, (max-width: 1439px) 87vw, (max-width: 1919px) 90vw, 98vw"
-                                                                srcset="./images/main_2.jfif 500w, ./images/main_2.jfif 800w, ./images/main_2.jfif 1080w, ./images/main_2.jfif 1280w"
+                                                                srcset="./images/main_8.jpg 500w, ./images/main_8.jpg 800w, ./images/main_8.jpg 1080w, ./images/main_8.jpg 1280w"
                                                                 alt="Slide Image – Outflow Webflow Template"
-                                                                src="./images/main_2.jfif" loading="lazy"
+                                                                src="./images/main_8.jpg" loading="lazy"
                                                                 class="slide-image" /></div>
                                                     </div>
                                                 </div>
@@ -488,9 +488,9 @@
                                         knowledge.<br>
                                         It portrays a graph of what has been learnt, what has been discovered, and what
                                         is yet to come.<br>
-                                        No matter where you live, you can drop college and pick up OutFlow, Choose what
-                                        you want to learn,
-                                        your learning preferences, and your favourite teacher, it will create a model
+                                        No matter where you live, you can skip college and pick up OutFlow, 
+                                        Choose what you want to learn, your preferred learning methods, 
+                                        and your favourite teacher, it will create a model
                                         with all your personal
                                         preferences and through XR/AR you can see anything what could seem impossible to
                                         see.<br>You learn from OutFlow,
@@ -560,7 +560,7 @@
                                                 to others as well, share your thoughts,
                                                 problems, and contribute towards the community.<br><br>
                                                 <b>Steve Jobs</b>: “We're here to put a dent in the universe. Otherwise
-                                                why else even be here?” so, put your dent.
+                                                why else even be here?”<br>so, put your dent.
                                             </div>
                                         </div>
                                     </div>
@@ -675,10 +675,10 @@
                                         id="w-node-b6bcc287-45df-6aa1-50a8-e284f21abe82-e7b5dc05"
                                         data-w-id="b6bcc287-45df-6aa1-50a8-e284f21abe82" href="/work/surge"
                                         class="work-image-wrapper _04 w-inline-block"><img
-                                            src="./images/main_2.jfif"
+                                            src="./images/main_8.jpg"
                                             loading="lazy" alt="Surge"
                                             sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 84vw, (max-width: 1439px) 44vw, (max-width: 1919px) 46vw, 49vw"
-                                            srcset="./images/main_2.jfif 500w, ./images/main_2.jfif 800w, ./images/main_2.jfif 1080w, ./images/main_2.jfif 1280w"
+                                            srcset="./images/main_8.jpg 500w, ./images/main_8.jpg 800w, ./images/main_8.jpg 1080w, ./images/main_8.jpg 1280w"
                                             class="work-image" /></a>
                                     <div id="w-node-b6bcc287-45df-6aa1-50a8-e284f21abe84-e7b5dc05"
                                         class="work-content-wrapper _04">
@@ -926,9 +926,9 @@
                                                 <div class="slide-image-vertical-flex">
                                                     <div class="slide-image-wrapper"><img
                                                             sizes="(max-width: 479px) 50px, (max-width: 767px) 66px, (max-width: 1279px) 94px, (max-width: 1439px) 7vw, 94px"
-                                                            srcset="./images/main_2.jfif 500w, ./images/main_2.jfif 800w, ./images/main_2.jfif 1080w, ./images/main_2.jfif 1280w"
+                                                            srcset="./images/main_8.jpg 500w, ./images/main_8.jpg 800w, ./images/main_8.jpg 1080w, ./images/main_8.jpg 1280w"
                                                             alt="Slide Image – Outflow Webflow Template"
-                                                            src="./images/main_2.jfif"
+                                                            src="./images/main_8.jpg"
                                                             loading="lazy" class="slide-image" /></div>
                                                 </div>
                                             </div>
